<resources>
    <string name="app_name">My Application</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="login_with_googlw">login with googlw</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="firstname">FirstNAme</string>
    <string name="last_name">Last Name</string>
    <string name="password">Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">HOME</string>
    <string name="all">All</string>
    <string name="profile">Profile</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="address">Address</string>
    <string name="handphone">Handphone</string>
    <string name="infinix_zero_8">Infinix Zero 8</string>
    <string name="rp_2_900_000">Rp. 2.900.000</string>
    <string name="kemeja_channel">Kemeja Channel</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="google_google_com">google@google.com</string>
</resources>