<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack"
    android:fillViewport="true"
    tools:context=".ui.profile.ProfileActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:background="@color/colorGrey"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="20dp"
                app:srcCompat="@drawable/arrow" />

            <TextView
                android:id="@+id/textView4"
                style="@style/TextView.poppinsReguler18SpGold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile" />
        </LinearLayout>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/circleImageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="25dp"
            android:src="@drawable/hp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

            <TextView
                style="@style/TextView.poppinsReguler14SpWhite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name" />

            <EditText
                android:id="@+id/full_name"
                style="@style/EditText.secondary"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_input_profile"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="Fahmi Abdul Aziz" />

            <TextView
                style="@style/TextView.poppinsReguler14SpWhite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/phone_number" />

            <EditText
                style="@style/EditText.secondary"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_input_profile"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="082384863761" />

            <TextView
                style="@style/TextView.poppinsReguler14SpWhite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/email" />

            <EditText
                android:id="@+id/email_profile"
                style="@style/EditText.secondary"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_input_profile"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="fahmiabdulaziz44@gmail.com" />

            <TextView
                style="@style/TextView.poppinsReguler14SpWhite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/date_of_birth" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    style="@style/EditText.secondary"
                    android:layout_width="match_parent"
                    android:layout_height="47dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_input_profile"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="07" />

                <EditText
                    style="@style/EditText.secondary"
                    android:layout_width="match_parent"
                    android:layout_height="47dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_input_profile"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="Oktober" />

                <EditText
                    style="@style/EditText.secondary"
                    android:layout_width="match_parent"
                    android:layout_height="47dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_input_profile"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="2001" />
            </LinearLayout>

            <TextView
                style="@style/TextView.poppinsReguler14SpWhite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/address" />

            <EditText
                style="@style/EditText.secondary"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_input_profile"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="Padang" />


        </LinearLayout>

        <ProgressBar
            android:id="@+id/loading_profile"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.538" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>